# blackboxai-1746243407399

./: # ✅ Astrobalendar Project Cleanup & Reco.md  .dockerignore  .editorconfig  .env.example  .eslintignore  .eslintrc.js  .firebaserc  .gitignore  Astrobalendar Workstation  Astrobalendar Workstation.pub  CHANGELOG.md  DEPLOYMENT.md  DEPLOYMENT_CONFIGS.zip.README.txt  Dockerfile  Dockerfile.backend  Dockerfile.backend.python  Dockerfile.backend.simple  Dockerfile.frontend  EMAIL_FEATURE.md  File_Structure_Report.md  Google Map API Key  MONITORING_ALERTS.md  Makefile  POST_DEPLOYMENT_REPORT.md  Plausible logo.txt  Procfile  QA_REPORT_2025-05-15.pdf.js  README.deploy.md  README.md  app.json  cypress.config.ts  deploy.sh  deployment_summary.md  docker-compose.yml  eslint-directives-map.json  eslint.config.mjs  firebase.json  global.d.ts  insert-eslint-directives.js  mongo-init.js  (+17 more)
apps/backend/: .env.example  .env.production  .firebaserc  .gcloudignore  .gitignore  .npmignore  Dockerfile  aimlPredict.js  config.js  cors_config.py  firebase.json  firebaseAdmin.js  firestore.indexes.json  firestore.rules  from flask import Flask, request, jsonif.py  index.js  index.py  main.py  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt  roleMiddleware.js  server.js  start_backend.sh
apps/backend/api/: chat.py  predict.py  user.py
apps/backend/app/: email.py  main.py  models.py
apps/backend/astrology/: calculator.js
apps/backend/config/: index.js
apps/backend/functions/: .fuse_hidden000215ae00000002  firebase.json  index.js  package-lock.json  (+2 more)
(+379 files in other folders)
